--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,14 +3,14 @@
         <div class="col-md-5 mx-auto mt-5">
             <h1>Login</h1>
             <hr>
-            <form action="">
+            <form [formGroup]="form" (submit)="onSubmit()">
                 <div class="form-group">
                     <label for="">Email:</label>
-                    <input type="email" name="" id="" class="form-control" placeholder="email">
+                    <input type="email" name="" id="" class="form-control" placeholder="email" formControlName="email">
                 </div>
                 <div class="form-group">
                     <label for="">Password:</label>
-                    <input type="password" name="" id="" class="form-control" placeholder="password">
+                    <input type="password" name="" id="" class="form-control" placeholder="password" formControlName="password">
                 </div>
                 <button type="submit" class="btn btn-success float-right">login</button>
             </form>
