--- a/src/app/authentication/components/adduser/adduser.component.html
+++ b/src/app/authentication/components/adduser/adduser.component.html
@@ -2,7 +2,7 @@
     <div class="app-title">
         <div>
             <h1>
-                <i class="fa fa-user"></i> Profile</h1>
+                <i class="fa fa-user-plus"></i> ADD USER</h1>
             <p>Start a beautiful journey here</p>
         </div>
         <ul class="app-breadcrumb breadcrumb">
@@ -10,7 +10,7 @@
                 <i class="fa fa-home fa-lg"></i>
             </li>
             <li class="breadcrumb-item">
-                <a href="#">profile</a>
+                <a href="#">Add user</a>
             </li>
         </ul>
     </div>
