--- a/src/app/authentication/components/userlist/userlist.component.html
+++ b/src/app/authentication/components/userlist/userlist.component.html
@@ -2,7 +2,7 @@
     <div class="app-title">
         <div>
             <h1>
-                <i class="fa fa-user"></i> Profile</h1>
+                <i class="fa fa-users"></i> User List</h1>
             <p>Start a beautiful journey here</p>
         </div>
         <ul class="app-breadcrumb breadcrumb">
@@ -10,14 +10,14 @@
                 <i class="fa fa-home fa-lg"></i>
             </li>
             <li class="breadcrumb-item">
-                <a href="#">profile</a>
+                <a href="#">User List</a>
             </li>
         </ul>
     </div>
     <div class="row">
         <div class="col-md-12">
             <div class="tile">
-                <div class="tile-body">Create a beautiful Profile</div>
+                <div class="tile-body">Create a beautiful</div>
             </div>
         </div>
     </div>
