--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,13 +10,12 @@
             <h3 class="login-head"><i class="fa fa-lg fa-fw fa-user"></i>LOGIN</h3>
             <div class="form-group">
                 <label class="control-label">EMAIL</label>
-                <input class="form-control" type="email" placeholder="Email" autofocus formControlName="email">
+                <input class="form-control" type="email" placeholder="Email" autofocus formControlName="email" autofocus>
             </div>
             <div class="form-group">
                 <label class="control-label">PASSWORD</label>
                 <input class="form-control" type="password" placeholder="Password" formControlName="password">
             </div>
-
             <div class="form-group btn-container">
                 <button type="submit" style="background-color: #009688;" class="btn btn-block text-white"><i class="fa fa-sign-in fa-lg fa-fw"></i>Login</button>
             </div>
