--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+.dropdown-item {
+    cursor: pointer;
+}
+
+a {
+    color: #009688;
+}
