--- a/src/app/authentication/components/profile/profile.component.html
+++ b/src/app/authentication/components/profile/profile.component.html
@@ -3,21 +3,64 @@
         <div>
             <h1>
                 <i class="fa fa-user"></i> Profile</h1>
-            <p>Start a beautiful journey here</p>
         </div>
         <ul class="app-breadcrumb breadcrumb">
             <li class="breadcrumb-item">
                 <i class="fa fa-home fa-lg"></i>
             </li>
             <li class="breadcrumb-item">
-                <a href="#">profile</a>
+                <a [routerLink]="['/',AppURL.Authen,AuthenURL.Profile]">profile</a>
             </li>
         </ul>
     </div>
     <div class="row">
         <div class="col-md-12">
             <div class="tile">
-                <div class="tile-body">Create a beautiful Profile</div>
+                <div class="tile-title-w-btn">
+                    <h4 class="title"><i class="fa fa-edit"></i> Edit Profile</h4>
+                    <p>
+                        <button style="background-color: #009688;" class="btn btn-primary icon-btn">
+                            <i class="fa fa-key"></i> Change password
+                        </button>
+                    </p>
+                </div>
+                <hr>
+                <div class="tile-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="text-center">
+                                <img src="assets/images/user-no-image.png" alt="" width="250px" height="250px">
+                                <input type="file" class="mt-4">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-6">
+                                    <div class="form-group">
+                                        <label for="">Firstname:</label>
+                                        <input type="text" name="" id="" class="form-control ">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="form-group">
+                                        <label for="">Lastname:</label>
+                                        <input type="text" name="" id="" class="form-control ">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="">Email:</label>
+                                <input type="email" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <p>User status : Member
+                                    <p>
+                            </div>
+                            <hr>
+                            <button class="btn btn-success float-right w-25"><i class="fa fa-save"></i> Save</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
