--- a/src/app/authentication/components/profile/profile.component.html
+++ b/src/app/authentication/components/profile/profile.component.html
@@ -26,40 +26,42 @@
                 </div>
                 <hr>
                 <div class="tile-body">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="text-center">
-                                <img src="assets/images/user-no-image.png" alt="" width="250px" height="250px">
-                                <input type="file" class="mt-4">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="row">
-                                <div class="col-6">
-                                    <div class="form-group">
-                                        <label for="">Firstname:</label>
-                                        <input type="text" name="" id="" class="form-control ">
-                                    </div>
-                                </div>
-                                <div class="col-6">
-                                    <div class="form-group">
-                                        <label for="">Lastname:</label>
-                                        <input type="text" name="" id="" class="form-control ">
-                                    </div>
+                    <form [formGroup]="form" (submit)="onSubmit()">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="text-center">
+                                    <img src="assets/images/user-no-image.png" alt="" width="250px" height="250px">
+                                    <input type="file" class="mt-4" formControlName="image">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label for="">Email:</label>
-                                <input type="email" class="form-control">
+                            <div class="col-md-6">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="form-group">
+                                            <label for="">Firstname:</label>
+                                            <input type="text" name="" id="" class="form-control " formControlName="fname">
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="form-group">
+                                            <label for="">Lastname:</label>
+                                            <input type="text" name="" id="" class="form-control " formControlName="lname">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="">Email:</label>
+                                    <input type="email" class="form-control" formControlName="email">
+                                </div>
+                                <div class="form-group">
+                                    <p>User status : Member
+                                        <p>
+                                </div>
+                                <hr>
+                                <button class="btn btn-success float-right w-25"><i class="fa fa-save"></i> Save</button>
                             </div>
-                            <div class="form-group">
-                                <p>User status : Member
-                                    <p>
-                            </div>
-                            <hr>
-                            <button class="btn btn-success float-right w-25"><i class="fa fa-save"></i> Save</button>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
